--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-vector-icons": "^10.3.0"
   },
