--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/core": "^7.12.1",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
-    "expo": "53.0.22",
-    "expo-blur": "~14.1.5",
-    "expo-font": "~13.3.1",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
+    "expo": "54.0.19",
+    "expo-blur": "~15.0.7",
+    "expo-font": "~14.0.9",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
     "lodash": "^4.17.21",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
-    "metro": "^0.82.4",
+    "metro": "^0.83.1",
     "metro-config": "^0.82.4",
     "metro-react-native-babel-preset": "^0.77.0"
   },
