--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/core": "^7.12.1",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
+    "@supabase/supabase-js": "^1.35.6",
+    "bcryptjs": "^3.0.2",
     "expo": "54.0.19",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
