--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/core": "^7.12.1",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "@supabase/supabase-js": "^1.35.6",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
-    "expo": "54.0.19",
+    "expo": "54.0.20",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
