--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
-    "expo": "54.0.20",
+    "expo": "54.0.21",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
@@ -33,6 +33,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
+    "react-native-qrcode-svg": "^6.3.16",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-vector-icons": "^10.3.0"
   },
