--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/core": "^7.12.1",
+    "@react-navigation/elements": "^2.8.0",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "@supabase/supabase-js": "^1.35.6",
@@ -23,10 +25,12 @@
     "expo": "54.0.21",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "lodash": "^4.17.21",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-element-dropdown": "^2.12.4",
@@ -35,7 +39,8 @@
     "react-native-paper": "^5.14.5",
     "react-native-qrcode-svg": "^6.3.16",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
