--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.8.0",
-    "expo": "54.0.21",
+    "expo": "54.0.22",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
@@ -41,8 +40,7 @@
     "react-native-qrcode-svg": "^6.3.16",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0",
-    "streamifier": "^0.1.1"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
