--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^3.0.2",
     "expo": "54.0.22",
     "expo-blur": "~15.0.7",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
@@ -34,10 +35,12 @@
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-qrcode-svg": "^6.3.16",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
@@ -45,6 +48,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
     "metro": "^0.83.1",
     "metro-config": "^0.82.4",
     "metro-react-native-babel-preset": "^0.77.0"
