--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,11 @@
             },
             "distribution": "internal"
         },
+        "preview1": {
+            "android": {
+                "gradleCommand": ":app:assembleRelease"
+            }
+        },
         "preview2": {
             "android": {
                 "gradleCommand": ":app:assembleRelease"
