--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-qrcode-svg": "^6.3.16",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
