--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
-    "expo": "54.0.22",
+    "expo": "54.0.23",
     "expo-blur": "~15.0.7",
     "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
@@ -42,9 +42,11 @@
     "react-native-qrcode-svg": "^6.3.16",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
