--- a/eas.json
+++ b/eas.json
@@ -6,36 +6,43 @@
     "build": {
         "development": {
             "developmentClient": true,
-            "distribution": "internal"
+            "distribution": "internal",
+            "channel": "development"
         },
         "preview": {
             "android": {
                 "buildType": "apk"
             },
-            "distribution": "internal"
+            "distribution": "internal",
+            "channel": "preview"
         },
         "preview1": {
             "android": {
                 "gradleCommand": ":app:assembleRelease"
-            }
+            },
+            "channel": "preview1"
         },
         "preview2": {
             "android": {
                 "gradleCommand": ":app:assembleRelease"
-            }
+            },
+            "channel": "preview2"
         },
         "preview3": {
-            "developmentClient": true
+            "developmentClient": true,
+            "channel": "preview3"
         },
         "preview4": {
-            "distribution": "internal"
+            "distribution": "internal",
+            "channel": "preview4"
         },
         "production": {
             "autoIncrement": true,
             "android": {
                 "buildType": "app-bundle"
             },
-            "distribution": "store"
+            "distribution": "store",
+            "channel": "production"
         }
     },
     "submit": {
